# qtplotly

./: README.md  pyproject.toml
examples/: fake-publisher.py  gans-test.py  plot-real-time-data.py  plot-static-data.py  real-time-data-publisher.py  test-viewer.py
qtplotly/: __init__.py  bridge.py  curve.py  marker.py  model.py  widget.py
qtplotly/resources/: plot.html
qtplotly/themes/: colors.py
