[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qtplotly"
version = "0.1.0"
description = "Qt Plotly widget for real-time scientific plotting"
authors = [
    {name = "Roberto Herrera"}
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.9"

dependencies = [
    "PySide6",
    "plotly",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qtplotly*"]

[tool.setuptools.package-data]
qtplotly = ["resources/*.html", "resources/*.js"]